# brepkit

./: .editorconfig  .gitignore  .release-please-manifest.json  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  ISSUES-BREPJS-BENCHMARKS.md  LICENSE  LICENSE-APACHE  README.md  RESEARCH_MATH.md  RESEARCH_PERFORMANCE.md  ROADMAP.md  SECURITY.md  deny.toml  mutants.toml  package-lock.json  package.json  release-please-config.json  rust-toolchain.toml  taplo.toml
crates/algo/: Cargo.toml
crates/algo/src/: bop.rs  diagnostic.rs  error.rs  gfa.rs  lib.rs  perf.rs
crates/algo/src/builder/: assemble.rs  builder_solid.rs  classify_2d.rs  face_class.rs  face_splitter.rs  fill_images.rs  fill_images_faces.rs  mod.rs  pcurve_compute.rs  plane_frame.rs  same_domain.rs  split_types.rs  wire_builder.rs
crates/algo/src/classifier/: analytic.rs  mod.rs  ray_cast.rs
crates/algo/src/ds/: arena.rs  curve.rs  face_info.rs  interference.rs  mod.rs  pave.rs  (+3 more)
crates/blend/: Cargo.toml
crates/blend/src/: adaptive_tolerance.rs  analytic.rs  blend_func.rs  builder_utils.rs  chamfer_builder.rs  corner.rs  fillet_builder.rs  g1_chain.rs  lib.rs  radius_law.rs  section.rs  spherical_triangle.rs  spine.rs  stripe.rs  trimmer.rs  walker.rs
crates/check/: Cargo.toml
crates/check/.greptile/: rules.md
crates/check/src/: error.rs  lib.rs  util.rs
crates/geometry/: Cargo.toml
crates/geometry/src/: error.rs  lib.rs
crates/heal/: Cargo.toml
crates/heal/src/: context.rs  error.rs  lib.rs  reshape.rs  status.rs
crates/io/: Cargo.toml  STEP_RESEARCH.md
crates/io/.greptile/: rules.md
crates/io/examples/: step_solid_report.rs
crates/io/src/: lib.rs
crates/io/tests/: compart_nonmanifold_inmem.rs  cross_format.rs  cut_reversed_tool_faces_inmem.rs  deepened_wall_opening_inmem.rs  dovetail_a1corner_holecut_inmem.rs  dovetail_a1corner_nubfuse_inmem.rs  dovetail_cornerclip_intersect_inmem.rs  dovetail_dblcorner_nub_inmem.rs  dovetail_groove_cut_inmem.rs  dovetail_interior_identity_intersect_inmem.rs  dovetail_relief_cut_inmem.rs  fracplate_seam_pocket_inmem.rs  fracwidth_corner_crescent_inmem.rs  gridfinity_honeycomb_cut_inmem.rs  gridfinity_honeycomb_scenarios_inmem.rs  gridfinity_lipfuse_dividers_inmem.rs  gridfinity_scoop_compartments_inmem.rs  gridfinity_wallcut_seq_inmem.rs  halfsockets_clipcut_inmem.rs  halfsockets_export_inmem.rs  halfsockets_lipfuse_inmem.rs  halfsockets_socketfuse_inmem.rs  intwidth_tangency_inmem.rs  labeltab_attach_inmem.rs  lipband_cut_inmem.rs  lipcorner_tangent_inmem.rs  lipfuse_boundary_retrace_inmem.rs  lipfuse_fixture.rs  lite_pad_graze_fuse_inmem.rs  lship_lipcut_inmem.rs  lship_lipfuse_inmem.rs  midcell_lipfuse_inmem.rs  multicavity_cut.rs  oring_nested_holes.rs  scoop_corner_cylinder_fuse.rs  scoop_fuse_order_independence.rs  scooplabel_ef_margin_inmem.rs  snapclip_deepened_notch_inmem.rs  snapclip_slot_cut_inmem.rs  socket_junction_disc_inmem.rs  (+6 more)
crates/math/: Cargo.toml  RESEARCH.md
crates/math/.greptile/: rules.md
crates/math/examples/: cdt_profile.rs
crates/math/src/: aabb.rs  analytic_intersection.rs  bvh.rs  cdt.rs  chord.rs  convex_hull.rs  curves.rs  curves2d.rs  det_hash.rs  filtered.rs  frame.rs  lib.rs  mat.rs  obb.rs  plane.rs  polygon2d.rs  polygon_offset.rs  predicates.rs  quadrature.rs  ray_triangle.rs  simd.rs  surfaces.rs  tolerance.rs  traits.rs  vec.rs
crates/math/tests/: ssi_robustness.rs
crates/offset/: Cargo.toml
crates/offset/src/: analyse.rs  arc_joint.rs  assemble.rs  data.rs  error.rs  inter2d.rs  inter3d.rs  lib.rs  loops.rs  offset.rs  self_int.rs
crates/offset/tests/: integration.rs
crates/operations/: Cargo.toml
crates/operations/benches/: boolean_perf.rs  boolean_pipeline.rs  boolean_tracking.rs  boolean_v1_v2.rs  cad_operations.rs  compound_cut_perf.rs  fuse_perf.rs
crates/operations/examples/: approx_census.rs  debug_boolean.rs  profile_boolean.rs  tess_profile.rs
crates/operations/src/: assembly.rs  blend_ops.rs  boolean.rs  cap.rs  chamfer.rs  classify.rs  compound_ops.rs  copy.rs  defeature.rs  distance.rs  draft.rs  evolution.rs  extrude.rs  feature_recognition.rs  fill_face.rs  fillet.rs  heal.rs  helix.rs  lib.rs  loft.rs  measure.rs  mesh_boolean.rs  mirror.rs  nurbs_boolean.rs  offset_face.rs  offset_solid.rs  offset_trim.rs  offset_v2.rs  offset_wire.rs  pattern.rs  pipe.rs  primitives.rs  projection.rs  query.rs  revolve.rs  section.rs  sew.rs  shell_op.rs  sketch.rs  split.rs  (+8 more)
crates/operations/tests/: blend_integration.rs  boolean_edge_cases.rs  boolean_invariants.rs  boolean_stress.rs  coaxial_cone_cut_classification.rs  coaxial_cones.rs  coaxial_cylinders.rs  coaxial_torus.rs  coincident_planes.rs  coincident_proptest.proptest-regressions  coincident_proptest.rs  concentric_spheres.rs  curved_properties.rs  examples.rs  golden_regression.rs  parity_boolean_curved.rs  parity_boolean_empty.rs  parity_boolean_planar.rs  perf_64cut_determinism.rs  profile_intersect.rs  proptest_operations.proptest-regressions  proptest_operations.rs  regress_blend_trim_neighbor_split.rs  regress_hexwall_cuts.rs  scale_dependent.rs
crates/render/: Cargo.toml
crates/render/examples/: viewer.rs
crates/render/shaders/: edge.wgsl  mesh.wgsl  quadric_mesh.wgsl
crates/render/src/: camera.rs  compute_mesh.rs  error.rs  lib.rs  mesh.rs  pipeline.rs  viewer.rs
crates/render/tests/: compute_mesh_lod.rs  compute_mesh_render.rs  offscreen_render.rs
crates/sketch/: Cargo.toml
crates/sketch/src/: lib.rs
crates/topology/: Cargo.toml
crates/topology/src/: adjacency.rs  arena.rs  builder.rs  compound.rs  compsolid.rs  edge.rs  explorer.rs  face.rs  graph.rs  lib.rs  pcurve.rs  shell.rs  solid.rs  test_utils.rs  topology.rs  validation.rs  vertex.rs  wire.rs
crates/wasm/: CHANGELOG.md  Cargo.toml
crates/wasm-macros/: Cargo.toml
crates/wasm-macros/src/: lib.rs
crates/wasm/.greptile/: rules.md
crates/wasm/src/: error.rs  handles.rs  helpers.rs  io.rs  kernel.rs  lib.rs  logging.rs  operations.rs  panics.rs  shapes.rs  state.rs  types.rs
xtask/: Cargo.toml
xtask/src/: main.rs  wasm.rs
(+324 files in other folders)
