[package]
name = "brepkit-algo"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "GFA boolean algorithm engine for brepkit"

[dependencies]
brepkit-math.workspace = true
brepkit-topology.workspace = true
thiserror.workspace = true
log.workspace = true

[dev-dependencies]
brepkit-topology = { workspace = true, features = ["test-utils"] }
proptest.workspace = true

[lints]
workspace = true
