[package]
description = "GFA boolean algorithm engine for brepkit"
edition.workspace = true
license.workspace = true
name = "brepkit-algo"
repository.workspace = true
rust-version.workspace = true
version = "0.1.0"

[dependencies]
brepkit-math.workspace = true
brepkit-topology.workspace = true

log.workspace = true
thiserror.workspace = true

[dev-dependencies]
brepkit-topology = {workspace = true, features = ["test-utils"]}
proptest.workspace = true

[lints]
workspace = true
