[package]
name = "brepkit-blend"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Walking-based fillet and chamfer engine for brepkit"

[dependencies]
brepkit-math.workspace = true
brepkit-topology.workspace = true

thiserror.workspace = true
log.workspace = true

[dev-dependencies]
brepkit-topology = { workspace = true, features = ["test-utils"] }

[lints]
workspace = true
