[package]
description = "Geometry algorithms: sampling, extrema, conversion"
edition.workspace = true
license.workspace = true
name = "brepkit-geometry"
repository.workspace = true
rust-version.workspace = true
version = "0.1.0"

[dependencies]
brepkit-math.workspace = true
thiserror.workspace = true

[dev-dependencies]
proptest.workspace = true

[lints]
workspace = true
