[package]
name = "brepkit-io"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "STEP and 3MF data exchange for brepkit"

[dependencies]
brepkit-math.workspace = true
brepkit-topology.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
proptest.workspace = true

[lints]
workspace = true
