[package]
name = "brepkit-io"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Multi-format B-Rep data exchange for brepkit (STEP, IGES, STL, 3MF, OBJ, PLY, glTF)"

[dependencies]
brepkit-math.workspace = true
brepkit-topology.workspace = true
brepkit-operations.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
zip.workspace = true
quick-xml.workspace = true

[dev-dependencies]
proptest.workspace = true
brepkit-topology = { workspace = true, features = ["test-utils"] }

[lints]
workspace = true
