[package]
name = "brepkit-math"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Vector math, transforms, NURBS, and geometric predicates for brepkit"

[dependencies]
robust.workspace = true
thiserror.workspace = true
serde = { workspace = true, optional = true }

[dev-dependencies]
proptest.workspace = true

[features]
default = []
serde = ["dep:serde"]

[lints]
workspace = true
