[package]
description = "Solid offset engine for brepkit"
edition.workspace = true
license.workspace = true
name = "brepkit-offset"
repository.workspace = true
rust-version.workspace = true
version = "0.1.0"

[dependencies]
brepkit-geometry.workspace = true
brepkit-math.workspace = true
brepkit-topology.workspace = true

thiserror.workspace = true

[dev-dependencies]
brepkit-operations.workspace = true
brepkit-topology = {workspace = true, features = ["test-utils"]}

[lints]
workspace = true
