[package]
name = "brepkit-operations"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "CAD modeling operations (booleans, fillets, extrusions) for brepkit"

[dependencies]
brepkit-math.workspace = true
brepkit-topology.workspace = true
brepkit-algo.workspace = true
brepkit-blend.workspace = true
brepkit-heal.workspace = true
brepkit-check.workspace = true
brepkit-geometry.workspace = true
thiserror.workspace = true
rayon.workspace = true
log.workspace = true

[dev-dependencies]
brepkit-topology = { workspace = true, features = ["test-utils"] }
proptest.workspace = true
criterion.workspace = true
env_logger.workspace = true

[[bench]]
name = "cad_operations"
harness = false

[[bench]]
name = "boolean_perf"
harness = false

[[bench]]
name = "compound_cut_perf"
harness = false

[[bench]]
name = "fuse_perf"
harness = false

[[bench]]
name = "boolean_pipeline"
harness = false

[lints]
workspace = true
