[package]
description = "CAD modeling operations (booleans, fillets, extrusions) for brepkit"
edition.workspace = true
license.workspace = true
name = "brepkit-operations"
repository.workspace = true
rust-version.workspace = true
version = "0.1.0"

[dependencies]
brepkit-algo.workspace = true
brepkit-blend.workspace = true
brepkit-check.workspace = true
brepkit-geometry.workspace = true
brepkit-math.workspace = true
brepkit-offset.workspace = true
brepkit-sketch.workspace = true
brepkit-topology.workspace = true
log.workspace = true
rayon.workspace = true
thiserror.workspace = true

[dev-dependencies]
brepkit-topology = {workspace = true, features = ["test-utils"]}
criterion.workspace = true
env_logger.workspace = true
proptest.workspace = true

[[bench]]
harness = false
name = "cad_operations"

[[bench]]
harness = false
name = "boolean_perf"

[[bench]]
harness = false
name = "compound_cut_perf"

[[bench]]
harness = false
name = "fuse_perf"

[[bench]]
harness = false
name = "boolean_pipeline"

[lints]
workspace = true
