[package]
name = "brepkit-sketch"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "2D parametric constraint solver (GCS) for brepkit sketch mode"

[dependencies]
thiserror.workspace = true

[dev-dependencies]
proptest.workspace = true

[lints]
workspace = true
