[package]
name = "brepkit-topology"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "B-Rep topological data structures for brepkit"

[dependencies]
brepkit-math.workspace = true
thiserror.workspace = true
smallvec.workspace = true


[dev-dependencies]
proptest.workspace = true

[features]
default = []

test-utils = []

[lints]
workspace = true
