[package]
description = "Proc macros for brepkit-wasm binding generation"
edition.workspace = true
license.workspace = true
name = "brepkit-wasm-macros"
repository.workspace = true
rust-version.workspace = true
version = "0.1.0"

[lib]
proc-macro = true

[dependencies]
quote = "1"
syn = {version = "2", features = ["full"]}
