[package]
name = "brepkit-wasm"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "WebAssembly bindings for brepkit"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
brepkit-math.workspace = true
brepkit-topology.workspace = true
brepkit-operations.workspace = true
brepkit-io.workspace = true
wasm-bindgen.workspace = true
thiserror.workspace = true

[lints]
workspace = true
