[package]
name = "brepkit-wasm"
version = "2.6.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "WebAssembly bindings for brepkit — browser-native B-Rep solid modeling"
keywords = ["cad", "brep", "wasm", "geometry", "solid-modeling"]
categories = ["wasm", "mathematics", "science"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["io"]
io = ["dep:brepkit-io"]

[dependencies]
brepkit-wasm-macros = { path = "../wasm-macros" }
brepkit-math.workspace = true
brepkit-topology.workspace = true
brepkit-operations.workspace = true
brepkit-io = { workspace = true, optional = true }
wasm-bindgen.workspace = true
thiserror.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
tsify.workspace = true
serde-wasm-bindgen.workspace = true

[lints]
workspace = true
